--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="profile_voucher_content">New Voucher</string>
     <string name="show_ledger">Show Voucher with Ledger</string>
     <string name="print_ledger">Print Ledger</string>
+    <string name="delete_voucher">Delete Voucher</string>
     <string name="add_new_client_button_text">Add New Client</string>
     <string name="client_card_demo_id">102000122345</string>
     <string name="client_card_demo_name">Subhajit Dey</string>
